--- a/esimerkit-Win8/Pong/Pong.csproj
+++ b/esimerkit-Win8/Pong/Pong.csproj
@@ -115,18 +115,19 @@
     <Content Include="Assets\SmallLogo.png" />
     <Content Include="Assets\SplashScreen.png" />
     <Content Include="Assets\StoreLogo.png" />
+    <Content Include="Content\cadance_evil.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Content\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Jypeli\Jypeli-Win8.csproj">
       <Project>{f2642dd9-9e8c-479d-87d1-8b6572d5529a}</Project>
       <Name>Jypeli-Win8</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\MonoGame\MonoGame.Framework\MonoGame.Framework.Windows8.csproj">
+    <ProjectReference Include="..\..\MonoGame\MonoGame.Framework\Jypeli.MonoGame.Framework.Windows8.csproj">
       <Project>{0518563c-acca-4a14-8c5d-ddbe93e2605f}</Project>
-      <Name>MonoGame.Framework.Windows8</Name>
+      <Name>Jypeli.MonoGame.Framework.Windows8</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\SimplePhysics\SimplePhysics-Win8.csproj">
       <Project>{7e51d9e3-3b1f-44d5-8376-90253690c95a}</Project>
