--- a/branches/MonoGame/Jypeli/Jypeli-WindowsGL.csproj
+++ b/branches/MonoGame/Jypeli/Jypeli-WindowsGL.csproj
@@ -254,14 +254,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\MonoGame\MonoGame.Framework\bin\WindowsGL\x86\Debug\Lidgren.Network.dll</HintPath>
     </Reference>
-    <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
+    <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\MonoGame\MonoGame.Framework\bin\WindowsGL\x86\Debug\OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System" />
     <Reference Include="System.Xml" />
-    <Reference Include="Tao.Sdl, Version=1.2.13.0, Culture=neutral, PublicKeyToken=9c7a200e36c0094e, processorArchitecture=MSIL">
+    <Reference Include="Tao.Sdl, Version=1.2.13.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\MonoGame\MonoGame.Framework\bin\WindowsGL\x86\Debug\Tao.Sdl.dll</HintPath>
     </Reference>
