--- a/Projektimallit/Xamarin/MonoDevelop.Jypeli.Linux/MonoDevelop.Jypeli.Linux.csproj
+++ b/Projektimallit/Xamarin/MonoDevelop.Jypeli.Linux/MonoDevelop.Jypeli.Linux.csproj
@@ -29,11 +29,12 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="MonoDevelop.Core, Version=2.6.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>references\MonoDevelop.Core.dll</HintPath>
     </Reference>
+    <Reference Include="mscorlib" />
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
